pin minima git ref and fix dark mode in site-header

--- a/_sass/minima/dark-mode.scss
+++ b/_sass/minima/dark-mode.scss
@@ -23,7 +23,7 @@ a:hover {
     color: $high-emph !important;
 }
 
-.site-nav {
+.site-nav, .site-header{
     background-color: $dark-grey;
     border-color: $overlay-light;
 }
